This is a fantastic set of changes! Youve successfully added the ability to generate and apply custom themes, along with the necessary data structures and API integration Heres a breakdown of what youve done and some minor suggestions for further improvement: **Key Changes and Why Theyre Great:** ARCHITECTUREmd CONTRIBUTINGmd ENVIRONMENTmd installsh LICENSE node_modules package-lockjson packagejson packages PROJECT_COMPLETEmd QUICKSTARTmd READMEmd **`GeneratedTheme` Interface:** This is the core of the new feature It perfectly defines the structure of a generated theme, aligning with the data expected by the API ARCHITECTUREmd CONTRIBUTINGmd ENVIRONMENTmd installsh LICENSE node_modules package-lockjson packagejson packages PROJECT_COMPLETEmd QUICKSTARTmd READMEmd **`ThemeGenerationRequest` Interface:** Defines the structure of the request sent to the API for theme generation Including `baseTheme` and `sessionId` adds flexibility and context ARCHITECTUREmd CONTRIBUTINGmd ENVIRONMENTmd installsh LICENSE node_modules package-lockjson packagejson packages PROJECT_COMPLETEmd QUICKSTARTmd READMEmd **`ThemeGenerationResponse` Interface:** Defines the structure of the response from the API, which is crucial for handling the generated theme and any accompanying reasoning ARCHITECTUREmd CONTRIBUTINGmd ENVIRONMENTmd installsh LICENSE node_modules package-lockjson packagejson packages PROJECT_COMPLETEmd QUICKSTARTmd READMEmd **Store Updates:** The store (`appStore`) is updated to manage the `customTheme` state and the `applyCustomTheme` action The `reasoning` field in the response is stored, providing valuable context ARCHITECTUREmd CONTRIBUTINGmd ENVIRONMENTmd installsh LICENSE node_modules package-lockjson packagejson packages PROJECT_COMPLETEmd QUICKSTARTmd READMEmd **API Integration (with `adaptationService`):** The `adaptationService` is extended with `generateTheme` function that makes the API call and updates the store ARCHITECTUREmd CONTRIBUTINGmd ENVIRONMENTmd installs

--- a/packages/backend/.env.example
+++ b/packages/backend/.env.example
@@ -1,5 +1,8 @@
-# Gemini AI Configuration
-GEMINI_API_KEY=your_gemini_api_key_here
+# Ollama AI Configuration
+# Make sure Ollama is running: ollama serve
+# Then pull a model: ollama pull gemma3:270m
+OLLAMA_URL=http://localhost:11434
+OLLAMA_MODEL=gemma3:270m
 
 # Server Configuration
 PORT=3000
